# cbindgen

./: .clippy.toml  .gitattributes  .gitignore  .travis.yml  CHANGES  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  README.serde_derive  autogen.h  build.rs  contributing.md  docs.md  run-tests.py  template.toml  test.py
.devcontainer/: devcontainer.json
.github/workflows/: cbindgen.yml  deploy.yml
cbindgen-macro/: Cargo.toml
cbindgen-macro/src/: lib.rs
ci/: script.sh
compile-tests/: cdecl.rs  cfg-2.rs  cfg-2.toml  cfg.rs  constant.rs  cycle.rs  enum.rs  euclid.rs  fn-ptr.rs  monomorph-2.rs  monomorph-3.rs  monomorph.rs  simplify-option-ptr.rs  std_lib.rs  struct.rs  typedef.rs  union.rs
docs/: template.toml
examples/: alias.rs  directive.rs  struct.rs
examples/build-script/: Cargo.toml  bindconf.json  build.rs
examples/fn-ptr/src/: lib.rs
sample-input/: bindings.rs
samples/: enum.rs
samples/build-script/: build.rs  cbindgen.toml
samples/build-script/src/: lib.rs
src/: bindgen.rs  bindings.rs  config.rs  gmain.rs  lib.rs  logging.rs  main.rs  rust_lib.rs
src/bindgen/: annotation.rs  bindings.rs  bitflags.rs  builder.rs  cargo.rs  cargo_expand.rs  cargo_lock.rs  cargo_metadata.rs  cargo_toml.rs  cdecl.rs  config.rs  declarationtyperesolver.rs  dependencies.rs  directive.rs  error.rs  items.rs  library.rs  mangle.rs  mod.rs  monomorph.rs  parser.rs  predefines.rs  rename.rs  reserved.rs  rust_lib.rs  syn_helpers.rs  transparent.rs  transparent_types.rs  utilities.rs  writer.rs
src/bindgen/cargo/: cargo.rs  cargo_expand.rs  cargo_lock.rs  cargo_metadata.rs  cargo_toml.rs  mod.rs
src/bindgen/ir/: alias.rs  annotation.rs  cfg.rs  constant.rs  documentation.rs  enumeration.rs  field.rs  function.rs  generic_path.rs  generics.rs  global.rs  gobject.rs  item.rs  mod.rs  opaque.rs  path.rs  repr.rs  specialization.rs  structure.rs  ty.rs  typedef.rs  union.rs
src/bindgen/language_backend/: cdynamic.rs  clike.rs  cython.rs  java_jna.rs  mod.rs  zig.rs
test_crates/constant/: Cargo.toml  constant.cpp  constant.rs
tests/: alias.rs  clike_language_backend.rs  constants.rs  depfile.rs  panic_abort_strategy.rs  profile.rs  testing-helpers.h  tests.rs
tests/basic_cbindgen_wrapper/: Cargo.toml
tests/basic_cbindgen_wrapper/src/: main.rs
tests/depfile/: Readme.md  cbindgen_test.cmake
tests/depfile/single_crate/: CMakeLists.txt  Cargo.toml
tests/depfile/single_crate_config/: CMakeLists.txt  Cargo.toml
tests/depfile/single_crate_default_config/: CMakeLists.txt  Cargo.toml
tests/expectations/: abi_string.c  abi_string.compat.c  abi_string.cpp  abi_string.d  abi_string.java  abi_string.pyx  alias.c  alias.compat.c  alias.cpp  alias.d  alias.java  alias.pyx  alias.zig  alias_both.c  alias_both.compat.c  alias_tag.c  alias_tag.compat.c  alias_tag.pyx  annotation.both.c  annotation.both.compat.c  annotation.c  annotation.compat.c  annotation.cpp  annotation.d  annotation.java  annotation.pyx  annotation.tag.pyx  annotation_both.c  annotation_both.compat.c  annotation_tag.c  annotation_tag.compat.c  annotation_tag.pyx  array.both.c  array.both.compat.c  array.c  array.compat.c  array.cpp  array.d  array.java  array.pyx  (+1616 more)
tests/expectations-symbols/: abi_string.c.sym  as_ty.c.sym  asserted_cast.c.sym  box.c.sym  cdecl.c.sym  cfg.c.sym  const_generics.c.sym  const_generics_arrayvec.c.sym  const_generics_bool.c.sym  const_generics_byte.c.sym  const_generics_char.c.sym  const_generics_thru.c.sym  constant_sort_name.c.sym  constant_sort_none.c.sym  dep_v2.c.sym  deprecated.c.sym  display_list.c.sym  doclength_short.c.sym  documentation.c.sym  documentation_block.c.sym  duplicated_constants.c.sym  expand_default_features.c.sym  expand_dep_v2.c.sym  expand_features.c.sym  export_name.c.sym  extern.c.sym  extern_2.c.sym  external_workspace_child.c.sym  fns.c.sym  function_args.c.sym  function_noreturn.c.sym  function_ptr.c.sym  function_sort_name.c.sym  function_sort_none.c.sym  generic_defaults.c.sym  generic_pointer.c.sym  global_variable.c.sym  ignore.c.sym  impl_unsafe_attr_method.c.sym  item_types.c.sym  (+28 more)
tests/expectations/both/: alias.c  alias.compat.c  annotation.c  annotation.compat.c  array.c  array.compat.c  asserted-cast.c  asserted-cast.compat.c  assoc_const_conflict.c  assoc_constant.c  assoc_constant.compat.c  associated_in_body.c  associated_in_body.compat.c  bitflags.c  bitflags.compat.c  body.c  body.compat.c  box.c  box.compat.c  cdecl.c  cdecl.compat.c  cell.c  cell.compat.c  cfg-2.c  cfg.c  (+130 more)
tests/rust/: abi_string.rs  annotation.rs  as_ty.rs  asserted-cast.rs  asserted-cast.toml  asserted_cast.java-jna.toml  asserted_cast.toml  assoc_const_conflict.rs  assoc_constant.rs  assoc_types.rs  assoc_types_nested.rs  associated_constants_rename_base_name.rs  associated_constants_rename_base_name.toml  associated_in_body.rs  associated_in_body.toml  bitflags.rs  bitflags.toml  body.cython.toml  body.rs  body.toml  box.cython.toml  box.java-jna.toml  box.rs  box.skip_cpp.rs  box.toml  cconv.rs  cconv_cfg.rs  cconv_cfg.toml  cconv_few.rs  cdecl.rs  cfg-2.rs  cfg-2.toml  cfg.cython.toml  cfg.java-jna.toml  cfg.rs  cfg.toml  cfg_2.cython.toml  cfg_2.java-jna.toml  cfg_2.toml  cfg_attr.rs  (+171 more)
tests/utils/: mod.rs  test_a_crate.rs
(+222 files in other folders)
