[package]
name = "cbindgen"
version = "0.14.2"
authors = ["Jeff Muizelaar <jmuizelaar@mozilla.com>",
           "Kartikaya Gupta <kats@mozilla.com>",
           "Ryan Hunt <rhunt@eqrion.net>"]
license = "MPL-2.0"
description = "A tool for generating C bindings to Rust code."
keywords = ["bindings", "ffi", "code-generation"]
categories = ["external-ffi-bindings", "development-tools::ffi"]
repository = "https://github.com/eqrion/cbindgen/"
edition = "2018"

[badges]
travis-ci = { repository = "eqrion/cbindgen" }

[dependencies]
clap = { version = "2", optional = true }
log = "0.4"
serde = { version = "1.0.103", default-features = false, features = ["derive"]}
serde_json = "1.0"
tempfile = "3.0"
toml = "0.5"
proc-macro2 = "1"
quote = "1"
heck = "0.3"

[dependencies.syn]
version = "1.0.3"
default-features = false
features = ["clone-impls", "extra-traits", "full", "parsing", "printing"]

[features]
default =  ["clap"]

[[bin]]
name = "cbindgen"
path = "src/main.rs"
doc = false
required-features = ["clap"]

[lib]
name = "cbindgen"
path = "src/lib.rs"
