[package]
name = "cbindgen"
version = "0.25.0"
authors = [
  "Emilio Cobos Álvarez <emilio@crisal.io>",
  "Jeff Muizelaar <jmuizelaar@mozilla.com>",
  "Kartikaya Gupta <kats@mozilla.com>",
  "Ryan Hunt <rhunt@eqrion.net>"
]
license = "MPL-2.0"
description = "A tool for generating C bindings to Rust code."
keywords = ["bindings", "ffi", "code-generation"]
categories = ["external-ffi-bindings", "development-tools::ffi"]
repository = "https://github.com/eqrion/cbindgen"
edition = "2018"
rust-version = "1.57"
exclude = [
  "tests/profile.rs", # Test relies in a sub-crate, see https://github.com/rust-lang/cargo/issues/9017
]

[dependencies]
clap = { version = "3.1", optional = true }
indexmap = "1"
log = "0.4"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
toml = "0.5"
proc-macro2 = "1"
quote = "1"
heck = "0.4"

[dependencies.syn]
version = "1.0.88"
default-features = false
features = ["clone-impls", "extra-traits", "full", "parsing", "printing"]

[dev-dependencies]
serial_test = "0.5.0"

[features]
default =  ["clap"]

[[bin]]
name = "cbindgen"
path = "src/main.rs"
doc = false
required-features = ["clap"]

[lib]
name = "cbindgen"
path = "src/lib.rs"
